apps/query-derive/tests/ui/value_missing_derive.stderr
error[E0277]: `Tier` is not a valid value for a `flusso_query::kind::Keyword` field
  --> tests/ui/value_missing_derive.rs:16:12
   |
16 |     email: Tier,
   |            ^^^^ unsupported field type
   |
help: the trait `FlussoValue<flusso_query::kind::Keyword>` is not implemented for `Tier`
  --> tests/ui/value_missing_derive.rs:7:1
   |
 7 | enum Tier {
   | ^^^^^^^^^
   = note: use a built-in leaf type, or add `#[derive(FlussoValue)]` (with the matching kind) to `Tier`
   = help: the following other types implement trait `FlussoValue<K>`:
             `&Uuid` implements `FlussoValue<flusso_query::kind::Keyword>`
             `&str` implements `FlussoValue<flusso_query::kind::Date>`
             `&str` implements `FlussoValue<flusso_query::kind::Keyword>`
             `&str` implements `FlussoValue<flusso_query::kind::Text>`
             `Uuid` implements `FlussoValue<flusso_query::kind::Keyword>`
             `f32` implements `FlussoValue<flusso_query::kind::Number>`
             `f64` implements `FlussoValue<flusso_query::kind::Number>`
             `i16` implements `FlussoValue<flusso_query::kind::Number>`
           and $N others
note: required by a bound in `__assert_field_value`
  --> tests/ui/value_missing_derive.rs:16:12
   |
16 |     email: Tier,
   |            ^^^^ required by this bound in `__assert_field_value`
